# h3xassist

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
h3xassist-web/: package.json  pnpm-lock.yaml
h3xassist-web/app/: globals.css  layout.tsx  page.tsx
h3xassist-web/app/settings/: page.tsx
h3xassist-web/components/: app-sidebar.tsx  connection-status.tsx  create-recording-dialog.tsx  delete-confirmation-dialog.tsx  header-nav.tsx  language-select.tsx  processing-indicator.tsx  recording-indicator.tsx
h3xassist-web/components/dashboard-columns/: active-sessions.tsx  completed-items.tsx  upcoming-events.tsx
h3xassist-web/components/ui/: button.tsx  date-time-picker.tsx  dynamic-form.tsx  select.tsx  switch.tsx
h3xassist-web/public/: manifest.json
h3xassist-web/src/config/: env.ts
h3xassist-web/src/contexts/: profiles-context.tsx  websocket-context.tsx
h3xassist-web/src/hooks/: useQueryRefresh.ts  useRecordings.ts
h3xassist-web/src/lib/: client.ts  date-format.ts  errors.ts  settings-utils.ts
h3xassist-web/src/providers/: query-provider.tsx
h3xassist-web/src/types/: api.ts  helpers.ts
scripts/: install_cudnn8_system.sh
src/h3xassist/: __init__.py  errors.py  logging.py  meeting_recorder.py  settings.py  ui.py
src/h3xassist/api/: app.py  dependencies.py
src/h3xassist/api/managers/: __init__.py  profile.py  recording.py  websocket.py
src/h3xassist/api/routers/: calendar.py  profiles.py  recordings.py  service.py  settings.py  websocket.py
src/h3xassist/audio/: __init__.py  recorder.py  virtual.py
src/h3xassist/browser/: __init__.py  platforms.py  profiles.py  session.py
src/h3xassist/cli/: __init__.py  configure.py  service.py  setup.py
src/h3xassist/integrations/: outlook.py
src/h3xassist/models/: api.py  profile.py  recording.py  summary.py
src/h3xassist/postprocess/: factory.py  pipeline.py  service.py  summarize.py  summary.md.j2  whisperx.py
src/h3xassist/postprocess/stages/: __init__.py  asr.py  export.py  mapping.py  summary.py
src/h3xassist/postprocess/utils/: __init__.py  speaker_utils.py
src/h3xassist/scheduler/: __init__.py  calendar_sync.py  scheduler.py
src/h3xassist/speaker/: __init__.py  mapping.py  utils.py
src/h3xassist/storage/: __init__.py  recording_handle.py  recording_store.py
